Update variables name and other small fixes